--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,3 +1,9 @@
 {
-  "__version__": "1.0.5"
+  "__version__": "1.0.5",
+  "general": {
+    "designResolution": {
+      "height": 1280,
+      "width": 720
+    }
+  }
 }
