--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -16,12 +16,18 @@
       {
         "index": 2,
         "name": "ENEMY"
+      },
+      {
+        "index": 3,
+        "name": "Wall"
       }
     ],
     "collisionMatrix": {
       "0": 0,
-      "1": 6,
-      "2": 2
+      "1": 14,
+      "2": 6,
+      "3": 2
     }
-  }
+  },
+  "layer": []
 }
