fix:去除补丁，重构残血bug处理相关代码
1.去除补丁，重构残血bug处理相关代码 2.动画和Enemysetting参数修改 3.精英怪生成逻辑修改 4.增添中立投射物碰撞体特性

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -16,12 +16,17 @@
       {
         "index": 2,
         "name": "ENEMY"
+      },
+      {
+        "index": 3,
+        "name": "Projectile"
       }
     ],
     "collisionMatrix": {
       "0": 0,
-      "1": 6,
-      "2": 2
+      "1": 14,
+      "2": 10,
+      "3": 6
     }
   }
 }
