无限地图相关 (#77)
* features

add background and initial equip

* modify

delete equip folder

* auto merge commit

commit weapon.meta

* feat: add map, add map edge

做了几张新地图，加了空气墙

* fix: fix wall location

微调了下空气墙的位置

* feat: Tiled Map added

change former map asset to tmx

* Feat:add tiled map

dynamic load tiled map

* feat: add mapmanager

try dynamic generate map

* feat: dynamic map

create first dynamic map

* bugfix: adjust the layer

now map will be add below the nodepool node

* add map prefab

add 3 new map tile

* adjust map

* modify Map.ts

a little modification

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -20,13 +20,20 @@
       {
         "index": 3,
         "name": "Projectile"
+      },
+      {
+        "index": 4,
+        "name": "ENTITY"
       }
     ],
     "collisionMatrix": {
-      "0": 4,
-      "1": 12,
-      "2": 11,
-      "3": 6
+      "0": 9,
+      "1": 28,
+      "2": 26,
+      "3": 23,
+      "4": 14,
+      "5": 0
     }
-  }
+  },
+  "custom_joint_texture_layouts": []
 }
